# hunfold

./: .travis.yml  LICENSE  TODO  dagostini.cabal  hunfold.cabal  package.yaml  stack.yaml
app/: Main.hs
data/: manysysts.json  test.json  vhf_pt.json
ext/: plot.py  plot_root.py  root2json.py  test.json
src/: Dagostini.hs  HUnfold.hs  Hamiltonian.hs  InMatrix.hs  Likelihood.hs  MarkovChain.hs  Matrix.hs  MatrixHelpers.hs  Metropolis.hs  Model.hs  NDSL.hs  Probability.hs  RunModel.hs
