name: hunfold
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: cspollard@gmail.com
synopsis: a basic bayesian unfolding library
description:
    a basic bayesian unfolding library
category: Data
author: Chris Pollard

source-repository head
    type: git
    location: http://github.com/cspollard/hunfold

library
    exposed-modules:
        Matrix
        MarkovChain
        Probability
        InMatrix
        Model
        RunModel
        NDSL
    build-depends:
        base -any,
        primitive -any,
        transformers -any,
        mwc-random -any,
        reflection -any,
        mwc-probability -any,
        pipes -any,
        erf -any,
        lens -any,
        matrix -any,
        linear -any,
        vector -any,
        aeson -any,
        text -any,
        free -any,
        unordered-containers -any,
        ad -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

executable run-hunfold
    main-is: Main.hs
    build-depends:
        base -any,
        hunfold -any,
        optparse-applicative -any,
        vector -any,
        bytestring -any,
        aeson -any,
        text -any,
        unordered-containers -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -Wall
